# server.js
@@ -1,7 +1,7 @@
 import express from 'express';
-import bodyParser from 'body-parser';
 import mongodb from './db/connect.js';
 import contactRoutes from './routes/contacts.js';
+import projectRoutes from './routes/projects.js';
 import swaggerUi from 'swagger-ui-express';
 import { createRequire } from 'module';
 const require = createRequire(import.meta.url);
@@ -12,13 +12,13 @@ const port = process.env.PORT || 8080;
 
 app
   .use(express.json())
-  .use(bodyParser.json())
   .use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
     next();
   })
   .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument)) // Swagger Route
-  .use('/contacts', contactRoutes);
+  .use('/contacts', contactRoutes)
+  .use('/projects', projectRoutes);
 
 mongodb.initDb((err) => {
   if (err) {
